[gd_scene load_steps=6 format=2]

[ext_resource path="res://gui/before_level/passenger_picker/passenger_picker.gd" type="Script" id=1]
[ext_resource path="res://gui/before_level/passenger_picker/car_seat/CarSeat.tscn" type="PackedScene" id=2]
[ext_resource path="res://gui/theme/pixel_theme.tres" type="Theme" id=3]

[sub_resource type="InputEventAction" id=1]
action = "ui_accept"

[sub_resource type="Shortcut" id=2]
shortcut = SubResource( 1 )

[node name="PassengerPicker" type="MarginContainer"]
anchor_left = 0.023
anchor_top = 0.04
anchor_right = 0.703
anchor_bottom = 0.959
offset_left = 0.447998
offset_right = 77.128
offset_bottom = 61.6
scale = Vector2( 0.9, 0.9 )
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
offset_right = 773.0
offset_bottom = 613.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
offset_right = 753.0
offset_bottom = 593.0
theme_override_constants/separation = 8

[node name="Seats" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
offset_right = 753.0
offset_bottom = 168.0
theme_override_constants/separation = 20
alignment = 1

[node name="CarSeat1" parent="Panel/MarginContainer/VBoxContainer/Seats" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 164.0
offset_top = 0.0
offset_right = 292.0
offset_bottom = 168.0

[node name="CarSeat2" parent="Panel/MarginContainer/VBoxContainer/Seats" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 312.0
offset_top = 0.0
offset_right = 440.0
offset_bottom = 168.0

[node name="CarSeat3" parent="Panel/MarginContainer/VBoxContainer/Seats" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 460.0
offset_top = 0.0
offset_right = 588.0
offset_bottom = 168.0

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer"]
offset_top = 176.0
offset_right = 753.0
offset_bottom = 555.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer"]
offset_right = 753.0
offset_bottom = 379.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_top = 8
theme_override_constants/margin_left = 10

[node name="PickList" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer"]
offset_left = 10.0
offset_top = 8.0
offset_right = 753.0
offset_bottom = 379.0
theme_override_constants/separation = 20

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
offset_top = 563.0
offset_right = 753.0
offset_bottom = 593.0

[node name="BackToMain" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
offset_right = 141.0
offset_bottom = 30.0
text = "Back to main"

[node name="Control" type="Control" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
offset_left = 145.0
offset_right = 325.0
offset_bottom = 30.0
size_flags_horizontal = 3

[node name="StartLevel" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
offset_left = 329.0
offset_right = 469.0
offset_bottom = 30.0
custom_minimum_size = Vector2( 140, 24 )
disabled = true
shortcut_in_tooltip = false
shortcut = SubResource( 2 )
text = "Start Level!"

[node name="Control2" type="Control" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
offset_left = 473.0
offset_right = 753.0
offset_bottom = 30.0
custom_minimum_size = Vector2( 280, 0 )
size_flags_horizontal = 3

[connection signal="button_down" from="Panel/MarginContainer/VBoxContainer/HBoxContainer2/BackToMain" to="." method="_on_BackToMain_button_down"]
[connection signal="button_down" from="Panel/MarginContainer/VBoxContainer/HBoxContainer2/StartLevel" to="." method="_on_StartLevel_button_down"]
